--- a/infos.html
+++ b/infos.html
@@ -266,7 +266,7 @@
         <div style="font-size:0.98rem; color:#888; margin-top:0.5rem;">
           Dem Team ist es jederzeit vorbehalten, die Regeln zu ändern und es liegt in eigen Verantwortung darauf zu achten und die Regeln regelmäßig zu lesen.<br>
           Unwissenheit schützt vor Strafe nicht! <br>
-          *Du stimmst automatisch dem Regelwerk zu wenn du dem Server betrittst.
+          *Du stimmst automatisch dem Regelwerk zu wenn du den Server betrittst.
         </div>
       </div>
       <div class="infos-box clickable" id="events" tabindex="0"
