--- a/geschichte.html
+++ b/geschichte.html
@@ -107,6 +107,7 @@
     <a href="bewerben.html">Bewerben</a>
     <a href="creator.html">Content Creator</a>
     <a href="social.html">Social Media</a>
+    <a href="raenge.html">Ränge</a>
   </nav>
   <main>
     <section class="history-section">
