--- a/guides.html
+++ b/guides.html
@@ -152,6 +152,7 @@
     <a href="bewerben.html">Bewerben</a>
     <a href="creator.html">Content Creator</a>
     <a href="social.html">Social Media</a>
+    <a href="raenge.html">Ränge</a>
   </nav>
   <main>
     <section class="card">
